--- a/example/package.json
+++ b/example/package.json
@@ -1,48 +1,49 @@
 {
-  "author": "Simon Hampton",
-  "name": "elm-webpack-starter",
-  "version": "1.0.0",
-  "description": "Elm starter with Webpack 3 hot-loading",
-  "main": "index.js",
-  "scripts": {
-    "test": "elm-test",
-    "start": "npm run dev",
-    "dev": "webpack-dev-server --hot --port 3000",
-    "build": "webpack",
-    "prod": "webpack -p",
-    "postinstall": "elm-package install -y && elm-test init"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/simonh1000/elm-webpack-starter.git"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-preset-env": "^1.6.0",
-    "bootstrap-loader": "^2.2.0",
-    "chokidar-cli": "^1.2.0",
-    "clean-webpack-plugin": "^0.1.16",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.4",
-    "elm-hot-loader": "^0.5.4",
-    "elm-webpack-loader": "^4.3.1",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
-    "html-webpack-plugin": "^2.30.1",
-    "node-sass": "^4.5.3",
-    "postcss-loader": "^2.0.6",
-    "resolve-url-loader": "^2.1.0",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "url-loader": "^0.5.9",
-    "webpack": "^3.5.3",
-    "webpack-dev-server": "^2.7.1",
-    "webpack-merge": "^4.1.0"
-  },
-  "dependencies": {
-    "bootstrap": "^4.0.0-beta",
-    "loglevel": "^1.4.1"
-  }
+    "author": "Simon Hampton",
+    "name": "elm-webpack-starter",
+    "version": "3.1.3",
+    "description": "Elm 0.19 starter with Webpack 4 hot-reloading",
+    "main": "index.js",
+    "scripts": {
+        "test": "elm-test",
+        "start": "npm run dev",
+        "dev": "webpack-dev-server --hot --colors --port 3000",
+        "build": "webpack",
+        "prod": "webpack -p"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/simonh1000/elm-webpack-starter.git"
+    },
+    "license": "MIT",
+    "devDependencies": {
+        "@babel/core": "^7.1.2",
+        "@babel/preset-env": "^7.1.0",
+        "babel-loader": "^8.0.4",
+        "clean-webpack-plugin": "^0.1.19",
+        "copy-webpack-plugin": "^4.5.2",
+        "css-loader": "^1.0.0",
+        "elm": "^0.19.0-bugfix2",
+        "elm-hot-webpack-loader": "^1.0.2",
+        "elm-verify-examples": "^3.0.1",
+        "elm-webpack-loader": "^5.0.0",
+        "file-loader": "^2.0.0",
+        "html-webpack-plugin": "^3.2.0",
+        "mini-css-extract-plugin": "^0.4.3",
+        "node-sass": "^4.9.3",
+        "resolve-url-loader": "^3.0.0",
+        "sass-loader": "^7.1.0",
+        "style-loader": "^0.23.0",
+        "url-loader": "^1.1.1",
+        "webpack": "^4.20.2",
+        "webpack-cli": "^3.1.2",
+        "webpack-dev-server": "^3.1.9",
+        "webpack-merge": "^4.1.4"
+    },
+    "dependencies": {
+        "purecss": "^1.0.0"
+    },
+    "prettier": {
+        "tabWidth": 4
+    }
 }
